# devops

./: README.md  administration.md
docs/certificate/: setup-root-ca.md  zooDeveloperPlatformRootCA.crt
docs/dns/: setup.md
docs/gcp/: quick-start.md
docs/gitlab/: mermaid.md  plantuml.md
docs/nexus-repository/: apt-repo.md  docker-repo.md  npm-repo.md  pypi-repo.md
docs/plantuml/: sample.puml
docs/plantuml/port-forward/: ssh-jump.puml
docs/plantuml/reverse-proxy/: hide-backend.puml  hide-gcs.puml  proxy.puml  reverse-proxy.puml
docs/plantuml/sharing/: gcp-gke-k8s.puml  poetry-manage-dependency.puml
docs/python/: install-poetry.md
docs/sharing/devops_learning_group/: 20240827_proxy.md  20240910_python_dependency_management.md  20240910_requirements_local.txt  20241022_observability_implement_log.md  20241105_observability_implement_metrics.md  20241203_observability_implement_traces.md  20250205_workshop_troubleshooting.md  20250218_feature_flag.md
docs/ssh/: port-forward.md
scripts/: .gitignore
scripts/certificates/: create_certificates.sh
scripts/docker-images/: Dockerfile_base_ubuntu
scripts/docker-images/ansible-awx-ee/: build-image.sh  execution-environment.yml
scripts/internet/: connect-proxy.service  ssh-remote-forward-22.sh
scripts/internet/bastion01/: nftables.conf
scripts/internet/isolated-a6000/: ssh-remote-forward-entry.sh
scripts/kubernetes/argocd/: install_argocd.sh  values.yaml
scripts/kubernetes/cilium/: install.sh  install_preflight.sh  ip-pool.yaml  l2-announce.yaml  values.yaml
scripts/kubernetes/mariadb/: init-resources.yaml  install.sh  values.yaml
scripts/kubernetes/vault/: admin.hcl  administration.sh  devops.hcl  gitlab.hcl  phm-admin.hcl  phm.hcl
scripts/ldap/: get_root_ca_certificate.sh  list_ldap_attributes.sh
scripts/poc/opensearch/: docker-compose-dashboard-only.yml  docker-compose.yml
scripts/server01/coredns/: Corefile  docker-compose.yaml
scripts/server01/gitlab/: backup_gitlab.sh  backup_old_gitlab.sh  docker-compose.yml  old-docker-compose.yml  test-docker-compose.yml
scripts/server01/k3s/: backup_k3s.sh  install_k3s.sh  k3s-config.yaml  kubelet.yaml
scripts/server01/kroki/: docker-compose.yml
scripts/server01/mariadb/: backup_mariadb.sh  docker-compose.yml
scripts/server01/mysql/: backup_mysql.sh  docker-compose.yml
scripts/server01/plantuml/: docker-compose.yaml
scripts/server01/proxy/: k3s.service.env  proxy_env_http  proxy_env_socks5  proxy_env_socks5h
scripts/server01/vault/: backup_vault.sh
scripts/server01/wordpress/: Dockerfile_wordpress_extension  backup_wordpress.sh  docker-compose.yml  nginx.conf  php.ini
scripts/server02/apt/: 99-custom-user-agent  99-skip-verify-peer
scripts/server02/gitlab-runner/: docker-compose.yaml  register_runner.sh
scripts/server02/ldap-login/: nslcd.conf  nsswitch.conf
scripts/server02/nexus-repository/: backup_nexus_repository.sh  docker-compose.yaml
scripts/server02/port-forward/: gke-argocd-server-port-forward.service
scripts/server03/gitlab-runner/: docker-compose.yaml  (+7 more)
snippets/gitlab-pages/: .gitlab-ci.yml  index.html
snippets/gke-autoscale/: Dockerfile  README.md  deployment-gke.yaml  deployment-local-keda.yaml  main.py  pyproject.toml
snippets/python_registry_test/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
snippets/python_registry_test/python_registry_test/: hello_module.py
snippets/python_registry_test/tests/: test_hello_module.py
snippets/python_test/: .gitignore  .gitlab-ci.yml  README.md  app.py  pyproject.toml
(+120 files in other folders)
