[project]
name = "python_registry_test"
version = "0.1.0"
description = "A sample Python library for testing gitlab package registry"
authors = [{name = "kimberly", email = "kimberly@kquiet.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [
  {include = "python_registry_test"}
]
include = [
    "tests/**"
]
requires-poetry = ">=2.0"

[[tool.poetry.source]]
name = "gitlab"
url = "http://192.168.201.83:8088/api/v4/projects/465/packages/pypi"
priority = "explicit"

[tool.poetry.group.test.dependencies]
pytest = { version = ">=8.0,<9" }
pytest-cov = { version = ">=6.2,<7" }

[tool.pytest.ini_options]
addopts = "-rA"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]

[tool.poetry.requires-plugins]
poethepoet = { version = ">=0.35,<1", extras = ["poetry_plugin"] }

[tool.poe.tasks.test]
interpreter = ["bash", "powershell"]
shell = """
pytest
"""

[tool.poe.tasks.test-coverage]
interpreter = ["bash", "powershell"]
shell = """
pytest --cov=. --cov-report=term-missing --cov-fail-under=70 --cov-report=html
"""

[tool.poe.tasks.publish]
control.script = "sys:stdout.write(sys.platform)"

[[tool.poe.tasks.publish.switch]]
case = "linux"
interpreter = "bash"
shell = """
rm -rf ./dist
poetry publish -v --build --no-interaction -r gitlab
"""

[[tool.poe.tasks.publish.switch]]
case = "win32"
interpreter = "powershell"
shell = """
Remove-Item -Recurse -Force .\\dist
poetry publish -v --build --no-interaction -r gitlab
"""

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"